Fix spacing in reviews

--- a/app/assets/stylesheets/components/_room_details.scss
+++ b/app/assets/stylesheets/components/_room_details.scss
@@ -134,11 +134,11 @@
 }
 
 .review-rating {
-  margin-top: 20px;
+  margin-top: 30px;
 }
 
 .review-comment {
-  margin-top: 15%;
+  margin-top: 25px;
 }
 
 .bottom-placeholder {
